--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -1,7 +1,22 @@
-<h1>Products</h1>
-<ul>
-    {%for product in products%}
-    <li>{{product.name}}</li>
-    {%endfor%}
+{% extends 'base.html' %}
 
-</ul>
+{% block content %}
+    <h1>Products</h1>
+    <div class="row"> 
+        {%for product in products%}
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="{{ product.image_url }}" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">{{ product.name}}</h5>
+                  <p class="card-text">{{ product.price }}</p>
+                  <a href="#" class="btn btn-primary"> Add to cart</a>
+                </div>
+              </div>
+        
+        
+            </div>
+            {%endfor%}
+    </div>
+
+{% endblock %}
